--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -28,14 +28,14 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        with:
-          args:
-            -Dsonar.projectKey=karanice_python-project-83
-            # Comma-separated paths to directories containing main source files.
-            #-Dsonar.sources= # optional, default is project base directory
-            # When you need the analysis to take place in a directory other than the one from which it was launched
-            #-Dsonar.projectBaseDir= # optional, default is .
-            # Comma-separated paths to directories containing test source files.
-            #-Dsonar.tests= # optional. For more info about Code Coverage, please refer to https://docs.sonarcloud.io/enriching/test-coverage/overview/
-            # Adds more detail to both client and server-side analysis logs, activating DEBUG mode for the scanner, and adding client-side environment variables and system properties to the server-side log of analysis report processing.
-            #-Dsonar.verbose= # optional, default is false
+        # with:
+        #   args:
+        #     -Dsonar.projectKey=karanice_python-project-83
+        #     # Comma-separated paths to directories containing main source files.
+        #     #-Dsonar.sources= # optional, default is project base directory
+        #     # When you need the analysis to take place in a directory other than the one from which it was launched
+        #     #-Dsonar.projectBaseDir= # optional, default is .
+        #     # Comma-separated paths to directories containing test source files.
+        #     #-Dsonar.tests= # optional. For more info about Code Coverage, please refer to https://docs.sonarcloud.io/enriching/test-coverage/overview/
+        #     # Adds more detail to both client and server-side analysis logs, activating DEBUG mode for the scanner, and adding client-side environment variables and system properties to the server-side log of analysis report processing.
+        #     #-Dsonar.verbose= # optional, default is false
