--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -27,7 +27,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        # SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         # with:
         #   args:
         #     -Dsonar.projectKey=karanice_python-project-83
