--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -18,7 +18,7 @@ jobs:
           make install
       - name: Run linter and pytest
         run: |
-          make check
+          make lint
   sonarqube:
     name: SonarQube
     runs-on: ubuntu-latest
