--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,13 @@ dependencies = [
     "validators>=0.35.0",
 ]
 
+[build-system] 
+requires = ["hatchling"] 
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel] 
+packages = ["page_analyzer"]
+
 [dependency-groups]
 dev = [
     "pytest>=8.3.5",
