--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -16,9 +16,9 @@ jobs:
         run: |
           pip install uv
           make install
-      - name: Run linter and pytest
+      - name: Run linter # and pytest
         run: |
-          make check
+          make lint 
   sonarqube:
     name: SonarQube
     runs-on: ubuntu-latest
